# botglue

./: .gitignore  LICENSE  README.md
daemon/: .gitignore  Cargo.toml
daemon/src/: db.rs  main.rs  podman.rs
daemon/src/models/: agent.rs  environment.rs  idea.rs  mod.rs  project.rs
daemon/src/routes/: agents.rs  environments.rs  ideas.rs  mod.rs  projects.rs
docs/landing/: index.html
docs/plans/: 2026-01-31-botglue-design.md  2026-02-07-backend-crud.md  2026-02-07-botglue-web-design.md  2026-02-07-web-scaffolding.md  2026-02-08-api-client-routing-dashboard.md  2026-02-08-create-project-and-project-detail.md  2026-02-08-environment-detail-page.md  2026-02-08-exec-ui.md  2026-02-08-podman_from_dot_claude.md
ui-common/: package.json  pnpm-lock.yaml  tsconfig.json
ui-common/api/: client.ts
ui-common/components/: AgentStatusBadge.tsx  EnvironmentCard.tsx  IdeaStatusBadge.tsx  ProjectCard.tsx  index.ts
ui-common/types/: models.ts
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: CreateAgentForm.tsx  CreateEnvironmentForm.tsx  CreateIdeaForm.tsx  CreateProjectForm.tsx
web/src/layouts/: AppLayout.tsx
web/src/pages/: AgentDetailPage.tsx  DashboardPage.tsx  EnvironmentDetailPage.tsx  IdeaDetailPage.tsx  ProjectDetailPage.tsx
